// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-child,
.emotion-18 .uc-fe-card-action:last-child,
.emotion-18 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:first-child,
.emotion-18 .uc-fe-card-action:first-child,
.emotion-18 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-child,
.emotion-18 .uc-fe-card-action:last-child,
.emotion-18 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:first-child,
.emotion-18 .uc-fe-card-action:first-child,
.emotion-18 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div
  class="uc-fe-card emotion-18 emotion-19"
>
  <div />
  <div
    class="uc-fe-card-header emotion-4 emotion-5"
  >
    <div
      class="uc-fe-card-title emotion-0 emotion-1"
    >
      This is the title
    </div>
    <div
      class="uc-fe-card-comment emotion-2 emotion-3"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-action emotion-10 emotion-11"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-content emotion-12 emotion-13"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-footer emotion-16 emotion-17"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      style="float:right"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-child,
.emotion-18 .uc-fe-card-action:last-child,
.emotion-18 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:first-child,
.emotion-18 .uc-fe-card-action:first-child,
.emotion-18 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-12:before,
.emotion-12:after {
  content: ' ';
  display: table;
}

.emotion-12:after {
  clear: both;
}

.emotion-8 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-10 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-6 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-6:before,
.emotion-6:after {
  content: ' ';
  display: table;
}

.emotion-6:after {
  clear: both;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-child,
.emotion-18 .uc-fe-card-action:last-child,
.emotion-18 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:first-child,
.emotion-18 .uc-fe-card-action:first-child,
.emotion-18 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-12:before,
.emotion-12:after {
  content: ' ';
  display: table;
}

.emotion-12:after {
  clear: both;
}

.emotion-8 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-10 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-6 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-6:before,
.emotion-6:after {
  content: ' ';
  display: table;
}

.emotion-6:after {
  clear: both;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div
  class="uc-fe-card emotion-18 emotion-19"
>
  <div />
  <div
    class="uc-fe-card-content emotion-0 emotion-1"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-action emotion-6 emotion-7"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-header emotion-12 emotion-13"
  >
    <div
      class="uc-fe-card-title emotion-8 emotion-9"
    >
      This is the title
    </div>
    <div
      class="uc-fe-card-comment emotion-10 emotion-11"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-footer emotion-16 emotion-17"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      style="float:right"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- popupContainer 1`] = `
.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-child,
.emotion-2 .uc-fe-card-action:last-child,
.emotion-2 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:first-child,
.emotion-2 .uc-fe-card-action:first-child,
.emotion-2 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-8:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-5 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-36 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-21 {
  height: 28px;
  line-height: 26px;
  padding: 1px 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-16 {
  display: inline-block;
}

.emotion-19 {
  vertical-align: baseline;
  margin-left: 5px;
  display: inline-block;
}

.emotion-34 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.emotion-23 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-23 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-23 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 .uc-fe-numberinput-handler-up,
.emotion-23 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 .uc-fe-numberinput-handler-up:hover,
.emotion-23 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-23 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-23 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-23 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input {
  text-align: center;
  margin: 0 4px;
  width: 26px;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.08);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-23 .uc-fe-numberinput-input:hover {
  z-index: 1;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-23 .uc-fe-numberinput-handler-up,
.emotion-23 .uc-fe-numberinput-handler-down {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 28px;
  border-width: 1px;
}

.emotion-23 .uc-fe-numberinput-handler-up:hover,
.emotion-23 .uc-fe-numberinput-handler-down:hover {
  z-index: 1;
}

.emotion-23 .uc-fe-numberinput-handler-up {
  right: 0;
}

.emotion-23 .uc-fe-numberinput-handler-down {
  left: 0;
}

.emotion-23 .uc-fe-numberinput-suffix {
  margin-left: 0;
}

.emotion-23 .uc-fe-numberinput-input {
  margin: 0;
}

.emotion-23 .uc-fe-numberinput-suffix {
  margin-left: 4px;
  margin-right: 0px;
}

.emotion-25 {
  margin: 0 4px;
}

.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-child,
.emotion-2 .uc-fe-card-action:last-child,
.emotion-2 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:first-child,
.emotion-2 .uc-fe-card-action:first-child,
.emotion-2 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-8:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-5 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-36 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-21 {
  height: 28px;
  line-height: 26px;
  padding: 1px 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-16 {
  display: inline-block;
}

.emotion-19 {
  vertical-align: baseline;
  margin-left: 5px;
  display: inline-block;
}

.emotion-34 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.emotion-23 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-23 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-23 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 .uc-fe-numberinput-handler-up,
.emotion-23 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 .uc-fe-numberinput-handler-up:hover,
.emotion-23 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-23 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-23 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-23 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-23 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 .uc-fe-numberinput-input {
  text-align: center;
  margin: 0 4px;
  width: 26px;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.08);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-23 .uc-fe-numberinput-input:hover {
  z-index: 1;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-23 .uc-fe-numberinput-handler-up,
.emotion-23 .uc-fe-numberinput-handler-down {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 28px;
  border-width: 1px;
}

.emotion-23 .uc-fe-numberinput-handler-up:hover,
.emotion-23 .uc-fe-numberinput-handler-down:hover {
  z-index: 1;
}

.emotion-23 .uc-fe-numberinput-handler-up {
  right: 0;
}

.emotion-23 .uc-fe-numberinput-handler-down {
  left: 0;
}

.emotion-23 .uc-fe-numberinput-suffix {
  margin-left: 0;
}

.emotion-23 .uc-fe-numberinput-input {
  margin: 0;
}

.emotion-23 .uc-fe-numberinput-suffix {
  margin-left: 4px;
  margin-right: 0px;
}

.emotion-25 {
  margin: 0 4px;
}

<div>
  <h3>
    Card 提供了内置的 getPopupContainer
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            style="background:#e1e6f0;height:50px;padding:10px"
          >
            This is the content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class=" emotion-10 emotion-11"
          >
            <div>
              <button
                class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-7 emotion-8 emotion-9"
                type="button"
              >
                <div>
                  请选择
                </div>
                <i
                  class="uc-fe-icon icon__down emotion-4 emotion-5 emotion-6"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-datepicker emotion-36 emotion-37"
          >
            <div
              class="uc-fe-datepicker-data-wrap emotion-21 emotion-22"
            >
              <span
                class="emotion-16 emotion-17"
              >
                2018-07-21
              </span>
              <i
                class="uc-fe-icon icon__calendar emotion-18 emotion-19 emotion-6"
                color="blue"
              />
            </div>
            <div
              class="uc-fe-datepicker-time-wrap emotion-33 emotion-34 emotion-35"
            >
              <div
                class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination emotion-23 emotion-24"
              >
                <div
                  class="uc-fe-numberinput-input-wrap"
                >
                  <input
                    autocomplete="off"
                    class="uc-fe-numberinput-input"
                    min="-9007199254740991"
                    step="1"
                    value="19"
                  />
                </div>
              </div>
              <span
                class="emotion-25 emotion-26"
              >
                :
              </span>
              <div
                class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination emotion-23 emotion-24"
              >
                <div
                  class="uc-fe-numberinput-input-wrap"
                >
                  <input
                    autocomplete="off"
                    class="uc-fe-numberinput-input"
                    min="-9007199254740991"
                    step="1"
                    value="55"
                  />
                </div>
              </div>
              <span
                class="emotion-25 emotion-26"
              >
                :
              </span>
              <div
                class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination emotion-23 emotion-24"
              >
                <div
                  class="uc-fe-numberinput-input-wrap"
                >
                  <input
                    autocomplete="off"
                    class="uc-fe-numberinput-input"
                    min="-9007199254740991"
                    step="1"
                    value="21"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-datepicker uc-fe-datepicker-month emotion-36 emotion-37"
          >
            <div
              class="uc-fe-datepicker-data-wrap emotion-21 emotion-22"
            >
              <span
                class="emotion-16 emotion-17"
              >
                2018-07
              </span>
              <i
                class="uc-fe-icon icon__calendar emotion-18 emotion-19 emotion-6"
                color="blue"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card demo -- single 1`] = `
.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-child,
.emotion-2 .uc-fe-card-action:last-child,
.emotion-2 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:first-child,
.emotion-2 .uc-fe-card-action:first-child,
.emotion-2 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-8 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-4 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-6 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-14 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #e3e9ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-child,
.emotion-2 .uc-fe-card-action:last-child,
.emotion-2 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:first-child,
.emotion-2 .uc-fe-card-action:first-child,
.emotion-2 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-8 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-4 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-6 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-14 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #d2d6ea;
  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.08),0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10:hover {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

<div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
  >
    <div />
    <div
      class="uc-fe-card-content emotion-0 emotion-1"
    >
      <div
        style="background:#e1e6f0;height:50px;padding:10px"
      >
        This is the content
      </div>
    </div>
  </div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
    style="margin-top:12px"
  >
    <div />
    <div
      class="uc-fe-card-header emotion-8 emotion-9"
    >
      <div
        class="uc-fe-card-title emotion-4 emotion-5"
      >
        This is the title
      </div>
      <div
        class="uc-fe-card-comment emotion-6 emotion-7"
      >
        This is the comment
      </div>
    </div>
    <div
      class="uc-fe-card-action emotion-14 emotion-15"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-10 emotion-11"
        type="button"
      >
        This is a action button
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-10 emotion-11"
        type="button"
      >
        This is a action button
      </button>
    </div>
  </div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
    style="margin-top:12px"
  >
    <div />
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      卡片本身无间距
    </div>
  </div>
</div>
`;
